# ser

./: .gitignore  Cargo.toml  README.md  analyze_examples.py  analyze_examples.sh  build.rs  check_proofs.py  collect_smpt_outputs.sh  compare_optimization_combos.sh  compare_optimizations.sh  install_smpt.sh  isl_wrapper.h  less_simple_ser_output.txt  proof_plan.md  render_stats.py  serializability_report.md  serializability_report_100_seconds.md  serializability_report_all_optimizations.md  serializability_report_default_timeout.md  serializability_report_no_optimizations.md  serializability_report_only_bidirectional.md  serializability_report_only_generate_less.md  serializability_report_only_remove_redundant.md  serializability_report_only_smart_kleene.md  serializability_report_optimized.md  serializability_report_unoptimized.md  serializability_report_without_opt.md  smpt_wrapper.sh  summarize_optimization_experiments_and_generate_plots_also_for_timeouts.py  test_determinism.py  test_empty_proofs.py  test_enhanced_smpt.rs  test_new_smpt.py
csvs/: combine_results.py  compare_results_all_combos_timeout_10_seconds_json.csv  compare_results_all_combos_timeout_10_seconds_ser.csv  compare_results_all_combos_timeout_30_seconds_json.csv  compare_results_all_combos_timeout_60_seconds_ser.csv
demo_output/: demo_constraints.xml  demo_petri.net
optimization_experiments/: combine_results_to_one_csv.py  compare_optimization_combos.sh  summarize_optimization_experiments_and_generate_plots.py
rocq/: rational-sets.v
scripts/: SMPT_certificate_fix_v2.patch  analyze_examples.py  (+10 more)
(+541 files in other folders)
