[package]
name = "ser"
version = "0.1.0"
edition = "2024"

[dependencies]
hash_cons = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"
libc = "0.2.171"
either = "1.15.0"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0.99"
