[package]
name = "ser"
version = "0.1.0"
edition = "2024"

[dependencies]
hash_cons = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"
libc = "0.2.171"
either = { version = "1.15.0", features = ["serde"] }
tempfile = "3"
sexp = "1.1.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.1"
csv = "1.3.1"
lazy_static = "1.4"
cached = "0.46"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0.99"

[profile.release]
debug = true